--- a/resources/assets/less/bem/chat-message-group.less
+++ b/resources/assets/less/bem/chat-message-group.less
@@ -25,6 +25,13 @@
   color: white;
   display: flex;
 
+  &:last-child {
+    padding-bottom: 80px;
+
+    @media @mobile {
+      padding-bottom: 200px;
+    }
+  }
 
   &--own {
     margin-left: 120px;
