--- a/resources/assets/less/bem/chat.less
+++ b/resources/assets/less/bem/chat.less
@@ -17,7 +17,6 @@
  */
 
 .chat {
-  display: flex;
   font-size: 12px;
   width: 100%;
 
@@ -47,5 +46,6 @@
     display: flex;
     flex-direction: column;
     flex: 1;
+    overflow-y: auto; // without this, firefox scroll breaks
   }
 }
